--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -8,11 +8,11 @@ layout: base
 
 {# data from _date/readingHistory2023.json #}
 <ul>
-    {# {% for read in readingHistory2023 | readingSorted %}
+    {% for read in readingHistory2023 | readingSorted %}
         <li>
             <a href="{{read.url}}">{{read.title}}</a>
         </li>
-    {% endfor %} #}
+    {% endfor %}
 </ul>
 
 {# Listen History
