--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
   order: 3
 ---
 
-{# <div class="rs-column-header-wide">
+<div class="rs-column-header-wide">
   <h1>
     <em>Article</em> pages</h1>
 </div>
@@ -16,4 +16,4 @@ eleventyNavigation:
   {% set postlist = collections.article %}
   {% include "post-list.njk" %}
 
-</article> #}
+</article>
