--- a/website-source/shared/css/brand.css
+++ b/website-source/shared/css/brand.css
@@ -1,9 +1,9 @@
 @import url(./reset.css);
 
-@font-face {
+/* @font-face {
     font-family: "Rubik";
     src: url(../fonts/Rubik-ExtraBold.ttf);
-}
+} */
 
 /*
 ##     ##    ###    ########   ######
