Added external link icon

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -141,7 +141,7 @@ jsFiles: []
 
                 {% include "../../website-source/shared/images/footer/footer-cat.svg" %}
 
-                <div>
+                <div class="rs-column-header-wide">
                     <nav>
                         <ul class="rs-switcher rs-nav-sub">
                             {% for item in navigationFooter %}
@@ -160,13 +160,8 @@ jsFiles: []
                         </ul>
                     </nav>
 
-                    <p>Built with 11ty</p>
-                    <p>Hundos</p>
+                    <p class="rs-tac">Company number: SC683321 &nbsp;&nbsp;&diams;&nbsp;&nbsp; Built with <a href="https://11ty.dev/" target="_blank">Eleventy v3.0.0</a> &nbsp;&nbsp;&diams;&nbsp;&nbsp; <a href="/licence/">MIT licence</a> &nbsp;&nbsp;&diams;&nbsp;&nbsp; &copy; Rising Sky Ltd. 2024</p>
 
-                    <div class="rs-tac">
-                        <p>Company number: SC683321</p>
-                        <p>&copy; Rising Sky Ltd. 2024</p>
-                    </div>
                 </div>
 
             </footer>
