--- a/website-source/shared/css/brand.css
+++ b/website-source/shared/css/brand.css
@@ -79,7 +79,7 @@
 
     --rs-transition-short: all 0.25s ease-in-out;
 
-    --rs-width-max-column: 70ch;
+    --rs-width-max-column: 75ch;
     --rs-width-max-header: 140ch;
 
     --rs-width-max-logo: 280px;
@@ -177,14 +177,6 @@ h2 {
     color: #2990ea;
 }
 
-a {
-    color: var(--rs-colour-link)
-}
-
-a:visited {
-    color: var(--rs-colour-link-visited)
-}
-
 h2 {
     font-size: var(--font-size-4);
 }
@@ -198,11 +190,38 @@ h4 {
 }
 
 a {
+    color: var(--rs-colour-link);
     text-underline-offset: 4px;
+    text-decoration-thickness: 2px;
 }
 
-a[href^="#"] {
+a:visited {
+    color: var(--rs-colour-link);
     text-decoration: underline dotted;
+    text-decoration-color: purple;
+}
+
+a[target="_blank"] {
+    position: relative;
+    margin-inline-end: 15px;
+
+}
+
+a[target="_blank"]::after {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    background-image: url(../images/icons/icon-new-window.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    right: -15px;
+}
+
+p {
+    text-wrap: balance;
 }
 
 /*
@@ -442,7 +461,9 @@ nav>ul>li>a:focus+p {
 
 nav>ul.rs-nav-sub {
     --threshold: 45rem;
-    gap: 0.5rem;
+    gap: var(--space-3xs);
+    margin: 0 auto var(--space-3xl) auto;
+    max-width: var(--rs-width-max-column);
 }
 
 nav>ul.rs-nav-sub>li>a {
@@ -454,22 +475,6 @@ nav>ul.rs-nav-sub>li>a {
     line-height: 1;
     display: flex;
     justify-content: center;
-
-    /* &:hover {
-        color: var(--rs-colour-ec-dark-blue);
-        background-color: rgba(255, 255, 255, 1);
-    }
-
-    &>svg {
-        display: inline-block;
-        width: 1lh !important;
-        height: 1lh !important;
-        margin-inline-end: 0.35rem;
-    }
-
-    &::after {
-        display: none;
-    } */
 }
 
 nav>ul.rs-nav-sub>li>a:hover {
@@ -531,7 +536,7 @@ nav>ul.rs-nav-sub>li>a::after {
     stroke: var(--rs-colour-logo-stroke);
     stroke-linecap: round;
     stroke-linejoin: round;
-    stroke-width: 3.5px
+    stroke-width: 7px
 }
 
 
@@ -649,28 +654,13 @@ footer {
     color: white;
     position: relative;
     margin-block-start: var(--space-xl);
-    /* padding-block: var(--space-xl); */
-
-    /* &>div {
-        max-width: var(--rs-width-max-column);
-        margin: 0 auto 0 auto;
-        padding: var(--space-xl) var(--space-s);
-    }
-
-    &>svg[data-id="footer-cat"] {
-        --rs-cat-height: var(--space-l);
-        position: absolute;
-        color: var(--rs-colour-ec-dark-blue);
-        right: var(--space-s);
-        top: calc(0.5px + var(--rs-cat-height) * -1);
-        height: var(--rs-cat-height) !important;
-    } */
+    padding-block-end: var(--space-m);
 }
 
 footer>div {
-    max-width: var(--rs-width-max-column);
+    /* max-width: var(--rs-width-max-column);
     margin: 0 auto 0 auto;
-    padding: var(--space-xl) var(--space-s);
+    padding: 0 var(--space-s); */
 }
 
 footer>svg {
@@ -684,10 +674,12 @@ footer>svg {
 }
 
 .rs-tac {
-    display: flex;
-    flex-basis: fit-content;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    margin: 0 auto;
     margin-block-start: var(--space-m);
-    gap: 0 1rem;
+    font-size: var(--font-size--2);
+    text-align: center;
+}
+
+.rs-tac a:visited {
+    color: yellow;
 }
