--- a/website-source/shared/css/reset.css
+++ b/website-source/shared/css/reset.css
@@ -57,11 +57,11 @@ h4 {
     text-wrap: balance;
 }
 
-/* A elements that don't have a class get default styles */
+/* A elements that don't have a class get default styles 
 a:not([class]) {
     text-decoration-skip-ink: auto;
     color: currentColor;
-}
+}*/
 
 /* Make images easier to work with */
 img,
