Added external link icon

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -12,7 +12,7 @@ jsFiles: []
 {% endif %}
 
 <!DOCTYPE html>
-<html lang="en"  data-is-dev={% if env === 'dev' %}"true"{% else %}"false"{% endif %}>
+<html class="no-js" lang="en"  data-is-dev={% if env === 'dev' %}"true"{% else %}"false"{% endif %}>
 
     <head>
         <meta charset="UTF-8">
