--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,6 +1,7 @@
 ---
 title: Rising Sky
 layout: base
+cssFiles: ["./index.css"]
 eleventyNavigation:
   key: <meta>
   order: 1
@@ -22,16 +23,25 @@ eleventyNavigation:
   <p>
     <strong>Patrick Grey</strong> is our lead developer, please <a href="#contact">get in touch</a> with him to discuss your project.</p>
 
-  <div>
-    <h2>Projects</h2>
+  <div class="rs-panels-3">
 
-    <h2>Articles list</h2>
-    {% set postlist = collections.article %}
-    {% include "post-list.njk" %}
+    <div class="rs-panel">
+      <h2>Projects</h2>
+      <p>This is a list of projects</p>
+    </div>
 
-    <h2>Smalls list</h2>
-    {% set postlist = collections.small %}
-    {% include "post-list.njk" %}
+    <div class="rs-panel">
+      <h2>Articles list</h2>
+      {% set postlist = collections.article %}
+      {% include "post-list.njk" %}
+    </div>
+
+    <div class="rs-panel">
+      <h2>Smalls list</h2>
+      {% set postlist = collections.small %}
+      {% include "post-list.njk" %}
+    </div>
+
   </div>
 
 </article>
