--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,7 +1,7 @@
 ---
 title: Rising Sky
 layout: base
-cssFiles: ["./index.css"]
+cssFiles: ["/index.css"]
 eleventyNavigation:
   key: <meta>
   order: 1
