Fixed panels layout

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -141,7 +141,7 @@ jsFiles: []
 
                 {% include "../../website-source/shared/images/footer/footer-cat.svg" %}
 
-                <div class="rs-column-header-wide">
+                <div class="rs-column-wide">
                     <nav>
                         <ul class="rs-switcher rs-nav-sub">
                             {% for item in navigationFooter %}
@@ -160,7 +160,7 @@ jsFiles: []
                         </ul>
                     </nav>
 
-                    <p class="rs-tac">Company number: SC683321 &nbsp;&nbsp;&diams;&nbsp;&nbsp; Built with <a href="https://11ty.dev/" target="_blank">Eleventy v3.0.0</a> &nbsp;&nbsp;&diams;&nbsp;&nbsp; <a href="/licence/">MIT licence</a> &nbsp;&nbsp;&diams;&nbsp;&nbsp; &copy; Rising Sky Ltd. 2024</p>
+                    <p class="rs-tac">Company number: SC683321 &nbsp;&nbsp;&hearts;&nbsp;&nbsp; Built with <a href="https://11ty.dev/" target="_blank">Eleventy v3.0.0</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; <a href="/licence/">MIT licence</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; &copy; Rising Sky Ltd. 2024</p>
 
                 </div>
 
