--- a/website-source/index.css
+++ b/website-source/index.css
@@ -9,8 +9,7 @@
 .rs-panel {
     background-color: whitesmoke;
     padding: var(--space-s);
-    flex: 1 1 0px;
-    /* width: 100%; */
+    width: 100%;
 }
 
 .rs-panel>h2 {
@@ -21,4 +20,10 @@
     margin-block-start: var(--space-xl);
     margin-block-end: var(--space-s);
 
+}
+
+@media only screen and (min-width: 1400px) {
+    .rs-panel {
+        flex: 1 1 0px;
+    }
 }
